plugins {
    id 'java'
}

version "$lambdalibsVersion"

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.slf4j:slf4j-api:2.0.5'
    implementation 'org.slf4j:slf4j-reload4j:2.0.5'

    //test
    testImplementation 'org.slf4j:slf4j-api:2.0.6'
    testImplementation 'org.slf4j:slf4j-reload4j:2.0.6'
    testImplementation "org.junit.jupiter:junit-jupiter-api:${junitJupiterApiVersion}"
    testImplementation "org.junit.platform:junit-platform-commons:${junitPlatformCommonsVersion}"
    testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:${junitJupiterEngineVersion}"
    implementation 'software.amazon.awssdk:ssm:2.25.7'

}

test {
    useJUnitPlatform()
    testLogging {
        events "failed"
        exceptionFormat "full"
    }
}

sonarqube {
    properties {
        property 'sonar.coverage.exclusions', "**/ParameterStoreUtil.java"
    }
}

java {
    sourceCompatibility = JavaVersion.VERSION_17
    targetCompatibility = JavaVersion.VERSION_17
}

tasks.withType(JavaCompile) {
    options.compilerArgs += [
            '--add-opens', 'java.base/java.lang=ALL-UNNAMED',
            '--add-opens', 'java.base/java.util=ALL-UNNAMED'
            // Add more --add-opens options as needed
    ]
}

tasks.withType(Test) {
    jvmArgs += [
            '--add-opens', 'java.base/java.lang=ALL-UNNAMED',
            '--add-opens', 'java.base/java.util=ALL-UNNAMED'
            // Add more --add-opens options as needed
    ]
}
